# python-rabbitair

./: .gitignore  README.md  setup.cfg  tox.ini
rabbitair/: __init__.py  client.py  exceptions.py  response.py  state.py  tcp.py  udp.py
tests/: test_client.py  test_response.py
