[metadata]
name = python-rabbitair
version = 0.0.4
author = Rabbit Air
author_email = developer@rabbitair.com
description = Python library for local control of Rabbit Air air purifiers
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
platforms = any
url = https://github.com/rabbit-air/python-rabbitair
project_urls =
    Bug Tracker = https://github.com/rabbit-air/python-rabbitair/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Home Automation

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
install_requires =
    cryptography
    zeroconf

[options.package_data]
* = py.typed

[flake8]
# To work with Black
# E501: line too long
# W503: Line break occurred before a binary operator
# E203: Whitespace before ':'
# D202 No blank lines allowed after function docstring
# W504 line break after binary operator
ignore =
    E501
